--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -3,7 +3,7 @@
 }
 
 .friends__avatar {
-  width: 100px;
+  width: 300px;
   margin-right: 10px;
 }
 
@@ -11,11 +11,11 @@ li {
   list-style: none;
   display: flex;
   padding: 10px;
-  border: 2px solid brown;
+  border: 2px solid whitesmoke;
   width: 300px;
   border-radius: 10px;
   margin-bottom: 10px;
-  box-shadow: 0 5px 5px rgb(100, 21, 21);
+  box-shadow: 0 5px 5px whitesmoke;
   justify-content: center;
 }
 
@@ -32,7 +32,7 @@ li {
   display: flex;
   align-items: center;
   border-radius: 10px;
-  box-shadow: 0 0 5px rgb(98, 24, 24);
+  box-shadow: 0 0 5px whitesmoke;
   background-color: blanchedalmond;
 }
 
