--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -23,6 +23,7 @@
   height: 80px;
   width: auto;
   font-weight: 800;
+  padding-top: 30px;
 }
 .statList {
   font-size: 25px;
@@ -33,7 +34,7 @@
   flex-direction: row;
   list-style: none;
   justify-content: space-between;
-  width: auto;
+  width: 400px;
 }
 .item {
   border: 3px solid whitesmoke;
