--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,10 +1,10 @@
 .table {
-  width: 400px;
+  width: 600px;
   margin: auto;
   margin-bottom: 10px;
-  border: 3px solid brown;
+  border: 3px solid whitesmoke;
   border-radius: 10px;
-  box-shadow: 0 5px 10px rgb(90, 22, 22);
+  box-shadow: 0 5px 10px whitesmoke;
 }
 
 .table thead th {
